 - add Spring.GetGlobalLos(allyTeamID) -> bool to LuaSyncedRead
 - add Spring.IsNoCostEnabled() -> bool to LuaSyncedRead
 - add Spring.GetLuaMemUsage to LuaUnsyncedRead
   returns the number of (kilo-)bytes used and (kilo-)allocations performed
   by the calling Lua state individually, as well as by all states globally
 - add Spring.GetVidMemUsage to LuaUnsyncedRead
 - add DrawSky and DrawSun callins; available when a map has no skybox defined
 - add DrawWater callin
 - add DrawTrees callin (enabled by /drawtrees 2; supersedes engine rendering)
 - make gl.Feature{Raw} able to draw default trees
   if drawing multiple trees in a row, use gl.Feature(treeID, true, false)
   for the *first* tree and gl.Feature(treeID, false, true) for the *last*
   [more efficient; call gl.Feature(treeID, true, true) to render a single
   tree with default state]
 - remove gl.Light, gl.Lighting, gl.Material, gl.ShadeModel
 - remove gl.Fog, gl.FogCoord, gl.SecondaryColor
 - remove gl.PointSize, gl.PointSprite, gl.PointParameter
 - remove gl.TexEnv, gl.MultiTexEnv, gl.TexGen, gl.MultiTexGen
 - remove gl.CreateList, gl.CallList, gl.DeleteList
 - remove gl.DrawListAtUnit
 - remove {Unit,Feature}Rendering.{SetPieceList,SetMaterialDisplayLists}
 - remove LuaMaterial {pre,post}list
 - add `VFS.GAME` as a synonym to `VFS.MOD`
 - support local-space tracking for dynamic lights added via Spring.Add{Map,Model}Light
   the light-definition table should contain a 'localSpace = true' entry to enable this
 - move GetConfig* to LuaUnsyncedRead
 - Add Spring.SetVideoCapturingTimeOffset() for > 30fps video capturing
 - default `defs.lua` now reads a new file, `defs_post.lua`, which
   currently filters out movedefs unused by any unitdef (previously
   this was done by the engine). You can prevent this filter by adding
   the `dont_remove` field to such movedefs. This is useful to make
   them available in `Spring.MoveCtrl.SetMoveDef` but beware the perf cost.

Misc:
 - remove joystick support