@@ -126,6 +126,7 @@ CALLIN_LIST = {
 	"DrawWater",
 	"DrawSky",
 	"DrawSun",
+	"DrawGrass",
 	"DrawTrees",
 	"DrawWorld",
 	"DrawWorldPreUnit",
