@@ -1751,6 +1751,7 @@ DRAW_CALLIN(DrawGenesis)
 DRAW_CALLIN(DrawWater)
 DRAW_CALLIN(DrawSky)
 DRAW_CALLIN(DrawSun)
+DRAW_CALLIN(DrawGrass)
 DRAW_CALLIN(DrawTrees)
 DRAW_CALLIN(DrawWorld)
 DRAW_CALLIN(DrawWorldPreUnit)
