@@ -578,6 +578,7 @@ DRAW_CALLIN(Genesis)
 DRAW_CALLIN(Water)
 DRAW_CALLIN(Sky)
 DRAW_CALLIN(Sun)
+DRAW_CALLIN(Grass)
 DRAW_CALLIN(Trees)
 DRAW_CALLIN(World)
 DRAW_CALLIN(WorldPreUnit)
