@@ -30,8 +30,10 @@ Lua:
    returns the number of (kilo-)bytes used and (kilo-)allocations performed
    by the calling Lua state individually, as well as by all states globally
  - add Spring.GetVidMemUsage to LuaUnsyncedRead
+ - add Spring.Get{Unit,Feature}PieceTransformMatrices to LuaUnsyncedRead
  - add DrawSky and DrawSun callins; available when a map has no skybox defined
  - add DrawWater callin
+ - add DrawGrass callin (enabled by /drawgrass 2; supersedes engine rendering)
  - add DrawTrees callin (enabled by /drawtrees 2; supersedes engine rendering)
  - make gl.Feature{Raw} able to draw default trees
    if drawing multiple trees in a row, use gl.Feature(treeID, true, false)
@@ -45,7 +47,7 @@ Lua:
  - remove gl.CreateList, gl.CallList, gl.DeleteList
  - remove gl.DrawListAtUnit
  - remove {Unit,Feature}Rendering.{SetPieceList,SetMaterialDisplayLists}
- - remove LuaMaterial {pre,post}list
+ - remove LuaMaterial {pre,post}list handling
  - add `VFS.GAME` as a synonym to `VFS.MOD`
  - support local-space tracking for dynamic lights added via Spring.Add{Map,Model}Light
    the light-definition table should contain a 'localSpace = true' entry to enable this
@@ -64,6 +66,7 @@ Misc:
  - make LuaVFSDownload rescan archives in main thread, and do so when a download finishes (not when one starts)
  - account for raw search in AICallback::GetPathLength
  - use hidden window for offscreen context rendering
+ - add /{more,less}grass and /drawgrass commands
  - remove Basic{Sky,Water,TreeDrawer} (3DTrees is now always 1)
  - remove /DynamicSky command and keybinding
  - remove /{More,Less}Clouds commands
